Changes with APR a8
  *) apr_create_tcp_socket() has been removed.  Use apr_create_socket()
     instead.  [Jeff Trawick]

  *) Source was moved from the apache-2.0 repository.  For all CHANGES
     prior to this time, please see the apache-2.0 repository