@@ -74,33 +74,6 @@ static apr_status_t get_local_addr(apr_socket_t *sock)
 /* Include this here so we have get_local_addr defined... */
 #include "../unix/sa_common.c"
 
-apr_status_t apr_set_ipaddr(apr_socket_t *sock, apr_interface_e which, const char *addr)
-{
-    u_long ipaddr;
-    struct sockaddr_in *ptr;
-
-    if (which == APR_LOCAL)
-        ptr = &sock->local_addr->sa.sin;
-    else if (which == APR_REMOTE)
-        ptr = &sock->remote_addr->sa.sin;
-    else
-        return APR_EINVAL;
- 
-    if (!strcmp(addr, APR_ANYADDR)) {
-        ptr->sin_addr.s_addr = htonl(INADDR_ANY);
-        return APR_SUCCESS;
-    }
-    
-    ipaddr = inet_addr(addr);
-    
-    if (ipaddr == APR_INADDR_NONE) {
-        return WSAEADDRNOTAVAIL;
-    }
-    
-    ptr->sin_addr.s_addr = ipaddr;
-    return APR_SUCCESS;
-}
-
 apr_status_t apr_get_local_name(struct sockaddr_in **name, apr_socket_t *sock)
 {
     if (sock->local_port_unknown || sock->local_interface_unknown) {
